--- a/WebContent/public/views/loggedSHome.html
+++ b/WebContent/public/views/loggedSHome.html
@@ -14,7 +14,7 @@
   <!-- <input type="text" name="search" placeholder="Search...">-->
   <input type="hidden" id="rm" name="rm" value="GET"/>
   <input type="hidden" id="ind" name="ind" value="no"/>
-  Search by Category:<select id="category" name="category">
+  Search by category:<select id="category" name="category">
     		<option value="Clothes">Clothes</option>
     		<option value="Electronics">Electronics</option>
     		<option value="Tools">Tools</option>
@@ -25,10 +25,10 @@
   </form>
 </div>
 
-<!--  <div class="toptwo">
-  <a href=".html">Category</a>
-  <a href="nowwhere.html">Category2</a>
-</div> -->
+<div class="toptwo">
+  <a href="userPs.html">My Products</a>
+  <a href="productC.html">Add Product</a>
+</div>
 
 <div class="content">
   <h2>Welcome to Amachon!</h2>
