--- a/WebContent/public/views/login.html
+++ b/WebContent/public/views/login.html
@@ -7,7 +7,7 @@
 </head>
 <h1>Login</h1>
 <body>
-<form name="loginForm" method="get" action="http://localhost:8080/Amachon/Register">
+<form name="loginForm" method="get" action="http://localhost:8080/Amachon2/Register">
 	<input type="hidden" id="rm" name="rm" value="GET"/>
 	Username: <input type="text" name="username"/><br/>
 	Password: <input type="password" name="password"/><br/>
