--- a/WebContent/public/styles/UserForm.css
+++ b/WebContent/public/styles/UserForm.css
@@ -9,7 +9,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 } 
 
-input[type=text], input[type=password] {
+input[type=text], input[type=password], input[type=number], select , textbox{
   width: 100%;
   box-sizing: border-box;
   border: 2px solid #ccc;
