--- a/WebContent/public/views/loggedHome.html
+++ b/WebContent/public/views/loggedHome.html
@@ -10,10 +10,12 @@
 <div class="topnav">
   <a href="updateU.html">Update user data</a>
   <a href="deleteU.html">Delete user</a> 
+  <a href="cart.html">Shopping Cart</a> 
   <form name="productForm" method="get" action="http://localhost:8080/Amachon2/Inventory">
   <!-- <input type="text" name="search" placeholder="Search...">-->
   <input type="hidden" id="rm" name="rm" value="GET"/>
   <input type="hidden" id="ind" name="ind" value="no"/>
+  <input type="hidden" id="ready" name="ready" value="no"/>
   Search by Category:<select id="category" name="category">
     		<option value="Clothes">Clothes</option>
     		<option value="Electronics">Electronics</option>
