--- a/WebContent/public/views/cart.html
+++ b/WebContent/public/views/cart.html
@@ -3,17 +3,15 @@
 <head>
 <meta charset="ISO-8859-1">
 <link rel="stylesheet" href="../styles/HomeTemplate.css">
-<title>My Products</title>
+<title>My Shopping Cart</title>
 </head>
 <body>
 <div id="data"></div>
 <script>
 var xhr = new XMLHttpRequest();
-xhr.open("POST", "http://localhost:8080/Amachon2/Inventory"); 
+xhr.open("POST", "http://localhost:8080/Amachon2/Cart"); 
 xhr.onload = function(event){ 
     document.getElementById("data").innerHTML = xhr.responseText;
-    
-    
 }; 
 var formData = new FormData();
 formData.append("rm","GET");
