--- a/WebContent/public/views/userProduct.html
+++ b/WebContent/public/views/userProduct.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <link rel="stylesheet" href="../styles/HomeTemplate.css">
-<title>My Products</title>
+<title>Products</title>
 </head>
 <body>
 <div id="data"></div>
@@ -18,6 +18,7 @@ xhr.onload = function(event){
 var formData = new FormData();
 formData.append("rm","GET");
 formData.append("ind","no");
+formData.append("ready","yes");
 xhr.send(formData);
 </script>
 </body>
